--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -6,6 +6,7 @@
     <title>Shakshuka</title>
 </head>
 <body>
-    <a href="../index.html" rel="noopener noreferer">Home</a>
+    <a href="../index.html" rel="noopener noreferrer">Home</a>
+    <img src="../images/shakshuka.jpg">
 </body>
 </html>
