--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -7,6 +7,38 @@
 </head>
 <body>
     <a href="../index.html" rel="noopener noreferrer">Home</a>
+    <br></br>
     <img src="../images/shakshuka.jpg">
+    <h3>Shakshuka: a wonderful Moroccan breakfast</h3>
+    <p>This recipe comes all the way from the northwestern coast of Africa.
+        It is a declious and hearty breakfast that is commonly eaten with some bread.
+        It is savory, a little tangy, full of spices, and healthy.
+    </p>
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>2 eggs</li>
+        <li>2 tomatoes or about 10 cherry tomatoes</li>
+        <li>2 garlic cloves</li>
+        <li>1 whole onion</li>
+        <li>paprika</li>
+        <li>cumin</li>
+        <li>turmeric powder</li>   
+        <li>ginger powder</li>
+        <li>salt and pepper (if you want)</li>
+        <li>Oil of your choice</li>   
+    </ul>
+    <h4>Steps:</h4>
+    <ol>
+        <li>Cut the onions, tomatoes, and garlic into small pieces.</li>
+        <li>Add some oil to the pan and put it on medium or high.</li>
+        <li>Cook the onions until slightly yellow and soft.</li>
+        <li>Add the garlic and all the spices, you may want to lower the heat at this point.</li>
+        <li>After a minute or so, when garlic starts to become a little golden, add the tomatoes.</li>
+        <li>Cook the tomatoes until they start becoming very soft, add a lid to help this process.</li>
+        <li>Once the liquid of the tomatoes is starting to evaporate, open 2 spaces up and crack in each egg.</li>   
+        <li>Continue cooking, play with the temperature as needed, close the lid if you desire as well.</li>
+        <li>When the eggs are to the doneness you prefer, you can stop cooking, add salt and pepper as desired.</li>
+        <li>Serve on a plate, or ideally, eat it straight from the pan by scooping it with your choice of bread!</li>   
+    </ol>
 </body>
 </html>
