--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>Alexis Recipes</h1>
-    <a href="./recipes/shakshuka.html" target="_blank" rel="noopener noreferrer">Shakshuka</a>
+    <ul>
+        <li><a href="./recipes/shakshuka.html" rel="noopener noreferrer">Shakshuka</a></li>
+        <li><a href="./recipes/smashburger.html" rel="noopener noreferrer">Smash Burger</a></li>
+        <li><a href="./recipes/shakshuka.html" rel="noopener noreferrer">Shakshuka</a></li>
+
+
+
+    </ul>
+    
 
 </body>
 </html>
