Added another recipe, bulgogi, and changed image sizes.

--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html" rel="noopener noreferrer">Home</a>
     <br></br>
-    <img src="../images/shakshuka.jpg">
+    <img src="../images/shakshuka.jpg" height="200" width="317">
     <h3>Shakshuka: a wonderful Moroccan breakfast</h3>
     <p>This recipe comes all the way from the northwestern coast of Africa.
         It is a declious and hearty breakfast that is commonly eaten with some bread.
