--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <ul>
         <li><a href="./recipes/shakshuka.html" rel="noopener noreferrer">Shakshuka</a></li>
         <li><a href="./recipes/smashburger.html" rel="noopener noreferrer">Smash Burger</a></li>
-        <li><a href="./recipes/shakshuka.html" rel="noopener noreferrer">Shakshuka</a></li>
-
-
-
+        <li><a href="./recipes/bulgogi.html" rel="noopener noreferrer">Bulgogi</a></li>
     </ul>
     
 
